--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Curso de JavaScrip</h1>
+    <p>uso de Git</p>
     
     <script src="assets/js/alerts.js"></script>
 </body>
