--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Curso de JavaScrip</h1>
     <p>uso de Git</p>
+    <p>usu de git desde visual studio code</p>
     
     <script src="assets/js/alerts.js"></script>
 </body>
