--- a/Index.html
+++ b/Index.html
@@ -10,6 +10,8 @@
     <h1>Curso de JavaScrip</h1>
     <p>uso de Git</p>
     <p>usu de git desde visual studio code</p>
+
+    <h1>Nuevo Cambio</h1>
     
     <script src="assets/js/alerts.js"></script>
 </body>
