--- a/Index.html
+++ b/Index.html
@@ -12,6 +12,7 @@
     <p>usu de git desde visual studio code</p>
 
     <h1>Nuevo Cambio</h1>
+    <h2>Cambio en la Mac</h2>
     
     <script src="assets/js/alerts.js"></script>
 </body>
