--- a/Index.html
+++ b/Index.html
@@ -13,6 +13,8 @@
 
     <h1>Nuevo Cambio</h1>
     <h2>Cambio en la Mac</h2>
+
+    <p>Todo esto es ya editando directamente en la mac y poder programar desde cualquier equipo.</p>
     
     <script src="assets/js/alerts.js"></script>
 </body>
