--- a/Index.html
+++ b/Index.html
@@ -15,6 +15,8 @@
     <h2>Cambio en la Mac</h2>
 
     <p>Todo esto es ya editando directamente en la mac y poder programar desde cualquier equipo.</p>
+
+    <p>otro cambio</p>
     
     <script src="assets/js/alerts.js"></script>
 </body>
